<resources>
    <string name="app_name">Datos personales</string>
    <string name="tv_name">Nombre</string>
    <string name="tv_surname">Primer Apellido</string>
    <string name="tv_surname2">Segundo Apellido</string>
    <string name="tv_age">Edad</string>
    <string name="tv_sex">Género</string>
    <string name="hint_name">Escriba su nombre</string>
    <string name="hint_surname">Escriba su primer apellido</string>
    <string name="hint_surname2">Escriba su segundo apellido</string>
    <string name="hint_age">Escriba aquí su edad</string>
    <string name="tv_marital_status">Estado civil</string>
    <string name="rb_male">Hombre</string>
    <string name="rb_female">Mujer</string>
    <string name="tv_has_childrens">¿Tiene hijos?</string>
    <string name="btn_generate">Generar información</string>
    <string name="btn_delete">Borrar todo</string>
    <string name="has_childrens_yes">Con hijos</string>
    <string name="childless">Sin hijos</string>
    <string name="legal_age">Mayor de edad</string>
    <string name="no_legal_age">Menor de edad</string>
    <string name="error_empty">Error, los siguientes campos deben estar rellenos: Nombre, 1er y 2º apellido, edad y género.</string>
    <string name="sp_married">Casado/a</string>
    <string name="sp__single">Soltero/a</string>
    <string name="sp_widower">Viudo/a</string>
    <string name="sp_other">Otro/a</string>

    <!--Elementos del spinner-->
    <string-array name="sp_marital_status">
        <item>@string/sp_married</item>
        <item>@string/sp__single</item>
        <item>@string/sp_widower</item>
        <item>@string/sp_other</item>
    </string-array>

    <!--Idiomas-->
    <string name="str_en">Inglés</string>
    <string name="str_es">Español</string>
    <string-array name="languages" >
        <item>@string/str_en</item>
        <item>@string/str_es</item>
    </string-array>
</resources>
