<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/et_firts_name"
        style="@style/style_practica"
        android:layout_width="@dimen/et_name_width"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_firts_name"
        android:layout_alignParentTop="true"
        android:layout_marginStart="92dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_name"
        android:importantForAutofill="no"
        android:inputType="textCapWords|textPersonName"
        android:textColorHighlight="@color/colorPrimary"
        tools:targetApi="26" />

    <EditText
        android:id="@+id/et_surname"
        style="@style/style_practica"
        android:layout_width="@dimen/et_surname_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_firts_name"
        android:layout_alignStart="@+id/tv_surname"
        android:layout_marginStart="92dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:hint="@string/hint_surname"
        android:importantForAutofill="no"
        android:inputType="textCapWords|textPersonName"
        tools:targetApi="26" />

    <TextView
        android:id="@+id/tv_firts_name"
        style="@style/style_practica"
        android:layout_alignBaseline="@+id/et_firts_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="66dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/tv_name"
        />

    <TextView
        android:id="@+id/tv_surname"
        style="@style/style_practica"
        android:layout_width="@dimen/tv_surname1_width"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et_surname"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="83dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/tv_surname" />

    <TextView
        android:id="@+id/tv_surname2"
        style="@style/style_practica"
        android:layout_width="@dimen/tv_surname2_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_surname"
        android:layout_alignBaseline="@+id/et_surname2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/tv_surname2" />

    <EditText
        android:id="@+id/et_surname2"
        style="@style/style_practica"
        android:layout_width="@dimen/et_surname2_width"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/et_firts_name"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="115dp"
        android:ems="10"
        android:hint="@string/hint_surname2"
        android:importantForAutofill="no"
        android:inputType="textCapWords|textPersonName"
        tools:targetApi="26" />

    <EditText
        android:id="@+id/et_age"
        style="@style/style_practica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/et_firts_name"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="172dp"
        android:ems="10"
        android:hint="@string/hint_age"
        android:importantForAutofill="no"
        android:inputType="number"
        tools:targetApi="26" />

    <TextView
        android:id="@+id/tv_age"
        style="@style/style_practica"
        android:layout_alignBaseline="@+id/et_age"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="187dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/tv_age"
        />

    <TextView
        android:id="@+id/tv_marital_status"
        style="@style/style_practica"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="295dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/tv_marital_status"
        />

    <Spinner
        android:id="@+id/sp_marital_status"
        android:layout_width="@dimen/sp_marital_status_width"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="132dp"
        android:layout_marginTop="290dp"
        android:contextClickable="false"
        android:entries="@array/sp_marital_status" />

    <TextView
        android:id="@+id/tv_generate_information"
        android:layout_width="370dp"
        android:layout_height="71dp"
        android:layout_alignStart="@+id/tv_surname"
        android:layout_alignParentTop="true"
        android:layout_marginTop="371dp"
        android:fontFamily="@font/roboto_black" />

    <Button
        android:id="@+id/btn_generate"
        style="@style/style_practica"
        android:layout_below="@+id/tv_generate_information"
        android:layout_alignStart="@+id/tv_surname"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/btn_generate" />

    <Button
        android:id="@+id/btn_delete"
        style="@style/style_practica"
        android:layout_alignTop="@+id/btn_generate"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="191dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/btn_delete" />

    <TextView
        android:id="@+id/tv_sex2"
        style="@style/style_practica"
        android:layout_below="@+id/et_age"
        android:layout_alignStart="@+id/tv_surname"
        android:layout_marginStart="0dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/tv_sex" />

    <RadioGroup
        android:id="@+id/rb_group_sex"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_age"
        android:layout_alignParentStart="true"
        android:layout_marginStart="131dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_male"
            style="@style/style_practica"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_black"
            android:text="@string/rb_male" />

        <RadioButton
            android:id="@+id/rb_female"
            style="@style/style_practica"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_black"
            android:text="@string/rb_female"
             />
    </RadioGroup>

    <Switch
        android:id="@+id/sw_childrens"
        style="@style/style_practica"
        android:layout_width="@dimen/sw_childrens_width"
        android:layout_above="@+id/tv_generate_information"
        android:layout_alignStart="@+id/tv_firts_name"
        android:layout_marginBottom="-371dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/tv_has_childrens" />

</RelativeLayout>